	PR debug/35896 	* dwarf2out.c (dw_expand_expr, common_check): Removed. 	(fortran_common): New function. 	(gen_variable_die): Call fortran_common instead of common_check, 	adjust for it returning tree instead of rtx.    Formatting.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@135060 138bc75d-0d04-0410-961f-82ee72b054a4